# rpi-deploy

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  opencode.json  package-lock.json  package.json
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude/skills/add-cli-command/: SKILL.md
.claude/skills/architecture-audit/: SKILL.md
.claude/skills/architecture-diagrams/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.security-review/: last-reviewed-sha.txt
crates/application/: Cargo.toml
crates/application/src/: command.rs  deploy.rs  diagnostics.rs  env.rs  environments.rs  gc.rs  lib.rs  lifecycle.rs  list.rs  locks.rs  logs.rs  mask.rs  remove.rs  scheduler.rs  secrets.rs  stats.rs  tail.rs  test_support.rs
crates/domain/: Cargo.toml
crates/domain/src/: contracts.rs  entities.rs  error.rs  lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: cloudflare.rs  cloudflared.rs  disk.rs  docker.rs  dotenv.rs  envfile.rs  events.rs  fsutil.rs  git.rs  health.rs  history.rs  hostnet.rs  lib.rs  metrics.rs  migrations.rs  overrides.rs  probe.rs  process.rs  repo.rs  secretpath.rs  secrets.rs  secretsfile.rs  sqlite.rs  stats.rs  sys.rs  temp.rs  test_sink.rs
dev/: agent.toml
docs/: ci-github-actions.md  cli-philosophy.md  install-agent-v0.1.md  migration-env-to-secrets.md  migration-v0.5-to-v0.6.md
docs/architecture/: README.md  crates.md  overview.md  storage.md
docs/architecture/flows/: agent-setup.md  agent-update.md  commands.md  connect.md  deploy.md  environments.md  gc.md  ingress.md  observability.md  secrets.md
docs/potential-features/: auth-gate.md  environment-overlays.md  runtime-config-metadata.md
docs/superpowers/plans/: 2026-06-09-pi-mvp-v0.1.md  2026-06-11-pi-resilience-v0.3.md  2026-06-11-pi-secrets-ingress-v0.2.md  2026-06-12-pi-operations-v0.4.md  2026-06-17-pi-install-ux-v0.5.md  2026-06-17-pi-lan-expose-review-fixes.md  2026-06-17-pi-lan-expose.md  2026-06-17-pi-operations-v0.4-review-fixes.md  2026-07-02-pi-install-scripts-v0.6.md  2026-07-03-pi-npm-install-v0.6.md  2026-07-07-container-commands.md  2026-07-07-prebuilt-binaries-v0.7.md  2026-07-07-secret-files.md  2026-07-08-colorful-console-output.md  2026-07-08-per-command-service.md  2026-07-09-cli-brand-visuals.md  2026-07-09-console-colour-expansion.md  2026-07-09-console-theme-branding.md  2026-07-09-rpi-cloudflare-lan-phase1.md  2026-07-09-rpi-cloudflared-adoption.md  2026-07-10-deploy-key-preflight.md  2026-07-10-deploy-stages.md  2026-07-10-docker-e2e-deployment.md  2026-07-10-e2e-parallel-scenarios-harness.md  2026-07-10-rpi-cloudflared-setup-hardening.md  2026-07-12-compat-versioning.md  2026-07-12-rpi-stats-e2e.md  2026-07-12-rpi-stats-modes.md  2026-07-13-rpi-remote-agent-update.md  2026-07-13-stats-tui-redesign.md  2026-07-14-architecture-docs.md  2026-07-24-environment-overlays.md
docs/superpowers/security/: 2026-07-07-container-commands-security-review.md  2026-07-07-prebuilt-binaries-security-review.md  2026-07-08-per-command-service-security-review.md  2026-07-08-secret-files-security-review.md
docs/superpowers/specs/: 2026-06-09-pi-deploy-tool-design.md  2026-06-12-pi-operations-v0.4-design.md  2026-06-17-pi-install-ux-v0.5-design.md  2026-06-17-pi-lan-expose-design.md  2026-06-18-pi-install-scripts-v0.6-design.md  2026-07-03-pi-npm-install-v0.6-design.md  2026-07-07-container-commands-design.md  (+21 more)
scripts/: check-version.js  claude-rust-check.sh  claude-stop-check.sh  install.sh  install.test.mjs  postinstall.js  postinstall.test.js
tests/e2e/: Dockerfile  agent.default.toml  base.compose.yaml  compose.yaml  contracts.test.mjs  git-entrypoint.sh  lib.sh  prepare-legacy.mjs  prepare-legacy.test.mjs  run.mjs  run.test.mjs  scenario.sh  target-entrypoint.sh
(+39 files in other folders)
