[package]
name = "pi-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
pi-domain = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pi-domain = { workspace = true, features = ["mocks"] }
mockall = { workspace = true }
